--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ _testmain.go
 *.exe
 *.test
 *.prof
+image-upload-to-dropbox-and-post-to-slack
+entrypoint/image-upload-to-dropbox-and-post-to-slack
